--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <p><strong>Chapitre 1</strong></p>
 
 <h3>
-<a id="la-mise-en-page" class="anchor" href="#la-mise-en-page" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="1.mise-en-page/readme.md">La mise en page</a>
+<a id="la-mise-en-page" class="anchor" href="http://idris-maps.github.io/tutoriel-fullstack-js-1-mise-en-page" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="1.mise-en-page/readme.md">La mise en page</a>
 </h3>
 
 <p>Dans le premier chapitre nous allons créer une simple page HTML, sans intéractions, pour avoir une mise en page que nous pourrons réutiliser par la suite. Pour certains composants, nous allons utiliser la librairie CSS Bootstrap de Twitter. </p>
@@ -76,7 +76,7 @@
 <p><strong>Chapitre 2</strong></p>
 
 <h3>
-<a id="application-en-javascript-pure-ou-vanilla" class="anchor" href="#application-en-javascript-pure-ou-vanilla" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="2.vanilla/readme.md">Application en JavaScript pure ou "vanilla"</a>
+<a id="application-en-javascript-pure-ou-vanilla" class="anchor" href="http://idris-maps.github.io/tutoriel-fullstack-js-2-vanilla-js" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="2.vanilla/readme.md">Application en JavaScript pure ou "vanilla"</a>
 </h3>
 
 <p>La première version de l'application, nous allons l'écrire de A à Z. Le but de l'exercice est de comprendre les différentes parties (le modèle, la vue et les contrôleurs) et ce qu'elles font. Il existe beaucoup de librairies, de scriptes créés par d'autres, qui peuvent nous aider à faire une application web. Pour bien comprendre à quoi elles nous servent et en quoi elles nous sont utiles il faut avoir une idée du code qu'elles nous permettent de ne pas écrire. C'est pour cela que nous n'en utilisons pas ici.</p>
