Finally links work

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <p><strong>Chapitre 1</strong></p>
 
 <h3>
-<a id="la-mise-en-page" class="anchor" href="http://idris-maps.github.io/tutoriel-fullstack-js-1-mise-en-page" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="1.mise-en-page/readme.md">La mise en page</a>
+<a id="la-mise-en-page" class="anchor" href="#la-mise-en-page" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="http://idris-maps.github.io/tutoriel-fullstack-js-1-mise-en-page">La mise en page</a>
 </h3>
 
 <p>Dans le premier chapitre nous allons créer une simple page HTML, sans intéractions, pour avoir une mise en page que nous pourrons réutiliser par la suite. Pour certains composants, nous allons utiliser la librairie CSS Bootstrap de Twitter. </p>
@@ -84,7 +84,7 @@
 <p><strong>Chapitre 3</strong></p>
 
 <h3>
-<a id="handlebars" class="anchor" href="#handlebars" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="3.handlebars/readme.md">Handlebars</a>
+<a id="handlebars" class="anchor" href="#handlebars" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="http://idris-maps.github.io/tutoriel-fullstack-js-3-handlebars">Handlebars</a>
 </h3>
 
 <p>Dans cette deuxième version de notre application. Nous allons utiliser la librairie patron <a href="http://handlebarsjs.com/">Handlebars</a> pour créer la <strong>vue</strong>. L'application va gagner en lisibilité. </p>
@@ -92,7 +92,7 @@
 <p><strong>Chapitre 4</strong></p>
 
 <h3>
-<a id="riot" class="anchor" href="#riot" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="4.riot/readme.md">Riot</a>
+<a id="riot" class="anchor" href="#riot" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="http://idris-maps.github.io/tutoriel-fullstack-js-4-riot">Riot</a>
 </h3>
 
 <p>Dans la troisième version, nous aborderons le développement par <strong>composants</strong>. Nous allons créer des composants réutilisables qui contiennent d'une manière logique le couple <strong>Vue-Contrôleurs</strong>. Le concepte a été popularisé par <a href="https://facebook.github.io/react/">React</a> de Facebook. Nous allons utiliser la librairie <a href="http://riotjs.com/">Riot</a>.</p>
@@ -100,7 +100,7 @@
 <p><strong>Chapitre 5</strong></p>
 
 <h3>
-<a id="angular" class="anchor" href="#angular" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="5.angular/readme.md">Angular</a>
+<a id="angular" class="anchor" href="#angular" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="http://idris-maps.github.io/tutoriel-fullstack-js-5-angular">Angular</a>
 </h3>
 
 <p>Dans la quatrième et dernière version de l'application nous allons utiliser le "framework" <a href="https://angularjs.org/">Angular</a> de Google. Cette fois il ne s'agit plus de remplacer des bouts de codes par des librairies comme dans les deux chapitres précédants mais d'entrer dans une logique de conception en soit. Angular, bien qu'écrit en JavaScript, a une syntaxe, logique et structure particulières. Nous allons voir les pours et les contres d'une telle approche.</p>
@@ -108,7 +108,7 @@
 <p><strong>Chapitre 6</strong></p>
 
 <h3>
-<a id="le-serveur" class="anchor" href="#le-serveur" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="6.serveur/readme.md">Le serveur</a>
+<a id="le-serveur" class="anchor" href="#le-serveur" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="http://idris-maps.github.io/tutoriel-fullstack-js-6-serveur">Le serveur</a>
 </h3>
 
 <p>Dans ce chapitre nous allons créer un serveur qui fait le lien entre les clients (les applications web) et une base de données. Nous allons utiliser le style d'architecture <a href="https://fr.wikipedia.org/wiki/Representational_State_Transfer">REST</a> pour la communication entre les clients et la base. Le serveur sera écrit en JavaScript avec <a href="http://expressjs.com/">Express</a>.</p>
@@ -116,7 +116,7 @@
 <p><strong>Chapitre 7</strong></p>
 
 <h3>
-<a id="ajax" class="anchor" href="#ajax" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="7.ajax/readme.md">AJAX</a>
+<a id="ajax" class="anchor" href="#ajax" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="http://idris-maps.github.io/tutoriel-fullstack-js-7-ajax">AJAX</a>
 </h3>
 
 <p>Dans le dernier chapitre nous allons adapter les clients pour qu'ils communiquent avec le serveur par requêtes <a href="https://fr.wikipedia.org/wiki/Ajax_%28informatique%29">AJAX</a> une architecture intimement liée aux serveurs REST.</p>
@@ -280,9 +280,7 @@ console.log(message.bonjour('Jean-Pierre'))
 <h2>
 <a id="le-code" class="anchor" href="#le-code" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Le code</h2>
 
-<p>Si vous avez installé NodeJS sur votre ordinateur et installé globalement <code>browserify</code>, <code>watchify</code> et <code>minify</code>, vous êtes prets à commencer ce tutoriel.</p>
-
-<p>Vous trouverez le code pour chaque exemple sur <a href="https://github.com/idris-maps/tutoriel-fullstack-js">github</a>.</p>
+<p>Si vous avez installé NodeJS sur votre ordinateur et installé globalement <code>browserify</code>, <code>watchify</code> et <code>minify</code>, vous êtes prêt à <a href="http://idris-maps.github.io/tutoriel-fullstack-js-1-mise-en-page">commencer ce tutoriel</a>.</p>
       </section>
     </div>
 
