--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/idris-maps/tutoriel-fullstack-js">View on GitHub</a>
 
-          <h1 id="project_title">Tutoriel-fullstack-js</h1>
-          <h2 id="project_tagline">Tutoriel Fullstack JavaScript - Chapitre 0 - Introduction</h2>
+          <h1 id="project_title">Tutoriel Fullstack JavaScript</h1>
+          <h2 id="project_tagline">Introduction</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/idris-maps/tutoriel-fullstack-js/zipball/master">Download this project as a .zip file</a>
