--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="description" content="Tutoriel-fullstack-js : Tutoriel Fullstack JavaScript - Chapitre 0 - Introduction">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
     <title>Tutoriel-fullstack-js</title>
   </head>
 
@@ -278,6 +277,8 @@ console.log(message.bonjour('Jean-Pierre'))
 <p>Browserify va combiner <code>main.js</code> et ses dépendences en un seul fichier <code>script.js</code>, puis minify va comprimer <code>script.js</code> pour créer <code>script.min.js</code>.</p>
 
 <p>Si vous avez installé NodeJS sur votre ordinateur et installé globalement <code>browserify</code>, <code>watchify</code> et <code>minify</code>, vous êtes prêt à <a href="http://idris-maps.github.io/tutoriel-fullstack-js-1-mise-en-page">commencer ce tutoriel</a>.</p>
+
+<a href="http://www.idris-maps.com"><img src="idris-bw-logo.png" alt="idris maps" width="100px"></a>
       </section>
     </div>
 
